--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -3,7 +3,7 @@ node {
     withMaven(maven:'maven') {
 
         stage('Checkout') {
-            git url: 'https://github.com/genmart/microservice1.git', credentialsId: 'githubnew', branch: 'master'
+            git url: 'https://github.com/genmart/microservice1.git', credentialsId: 'github', branch: 'master'
         }
         stage('Build') {
             sh 'mvn clean install'
