--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -6,7 +6,7 @@ node {
             git url: 'https://github.com/genmart/microservice1.git', credentialsId: 'github', branch: 'master'
         }
         stage('Build') {
-            sh 'mvn clean install'
+            bat 'mvn clean install'
 
             def pom = readMavenPom file:'pom.xml'
             print pom.version
