--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -1,3 +1,20 @@
+pipeline {
+    agent any   
+    stages {
+        stage('Checkout') {
+           steps {
+        git url: 'https://github.com/genmart/microservice1.git', credentialsId: 'github', branch: 'master'
+     }
+        }
+        stage('Build') {
+            steps {               
+                bat 'mvn clean install'               
+                }
+            }      
+        }
+    }
+
+/*
 node {
 
     withMaven(maven:'maven') {
@@ -12,7 +29,7 @@ node {
             def pom = readMavenPom file:'pom.xml'
             print pom.version
             env.version = pom.version
-        }
+        } */
         /*
         stage('Image') {
             dir ('account-service') {
@@ -32,9 +49,9 @@ node {
            // build job: 'customer-service-pipeline', wait: false
         }      
 		*/
-    }
+    //}
 
-	}
+	//}
 /*pipeline {
     agent any
     
