--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -10,7 +10,15 @@ pipeline {
             steps {               
                 bat 'mvn clean install'               
                 }
-            }      
+            } 
+            stage('Image') {
+            dir ('account-service') {
+                def app = docker.build "genmart/account-service:${env.version}"
+				docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+					app.push()
+					}
+            }
+        }        
         }
     }
 
