--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -14,10 +14,12 @@ pipeline {
         stage('Image') {
            steps {
               dir ('account-service') {
-              def app = docker.build "genmart/account-service:${env.version}"
-			  docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-			     app.push()
-			   }
+              script{
+              	def app = docker.build "genmart/account-service:${env.version}"
+                docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+			       app.push()
+			      }
+               }
             }
          }
       }        
